--- a/manifest.json
+++ b/manifest.json
@@ -64,6 +64,14 @@
         "*://shopee.vn/",
         "*://cf.shopee.vn/"
     ],
-    "content_security_policy": "script-src 'self' 'sha256-WOdSzz11/3cpqOdrm89LBL2UPwEU9EhbDtMy2OciEhs=' https://www.gstatic.com https://*.firebaseio.com; object-src 'self'",
+    "content_security_policy": "script-src 'self' 'sha256-WOdSzz11/3cpqOdrm89LBL2UPwEU9EhbDtMy2OciEhs=' https://www.gstatic.com https://*.firebaseio.com https://apis.google.com; object-src 'self'",
+    "oauth2": {
+        "client_id": "759441836020-t2tmv8qqq9c8421n4ti2djfoq3iab8hp.apps.googleusercontent.com",
+        "scopes": [
+          "https://www.googleapis.com/auth/userinfo.email",
+          "https://www.googleapis.com/auth/userinfo.profile",
+          "https://www.googleapis.com/auth/spreadsheets"
+        ]
+      },
     "manifest_version": 2
 }
