--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "My First Chrome Ext",
-    "description": "Firestore",
+    "name": "Lập Nghiệp Shop Online",
+    "description": "Công cụ hỗ trợ các shop bán hàng thông minh hơn",
     "version": "1.0",
     "options_page": "options.html",
 
@@ -12,11 +12,15 @@
             "128": "images/get_started128.png"
         },
         "default_popup": "popup/popup.html",
-        "default_title": "Add order to my firestore"
+        "default_title": "Lập Nghiệp Shop Online"
     },
     "background": {
         "page": "background.html"
     },
+    "web_accessible_resources": [
+        "img/*.png",
+        "app-content/template/*.html"
+      ],
     "content_scripts": [{
         "matches": [
             "https://banhang.shopee.vn/*",
@@ -28,9 +32,8 @@
             
            
 
-            //"jquery-3.1.1.min.js", 
             "lib/bootstrap/js/bootstrap.min.js", 
-            "lib/angular/angular.min.js",
+            "lib/angular/1.5.9/angular.min.js",
             "lib/moment/moment.js",
             "lib/moment/angular-moment.min.js",
             "lib/moment/vi.js",
@@ -38,11 +41,15 @@
             "lib/jszip/jszip-utils.min.js",
             "lib/jszip/FileSaver.min.js",
             "lib/noty/js/noty.min.js",
-            //"content.js" 
+
             "lib/qrcode.min.js",
-            "js/content.js"           
+            "js/custom-shopee.js",
+            "app-content/app.js",
+            "app-content/shopeeController.js",
+            "app-content/1688Controller.js",
+            "content.js"
         ],
-        "css":["lib/bootstrap/css/bootstrap.min.css", "lib/noty/css/noty.css", "lib/custom/css/custom.css"],
+        "css":["lib/bootstrap/css/bootstrap.min.css", "lib/noty/css/noty.css", "lib/custom/content/css/custom.css"],
         "run_at": "document_end"//document_start
     }],
 
@@ -64,13 +71,12 @@
         "*://shopee.vn/",
         "*://cf.shopee.vn/"
     ],
-    "content_security_policy": "script-src 'self' 'sha256-WOdSzz11/3cpqOdrm89LBL2UPwEU9EhbDtMy2OciEhs=' https://www.gstatic.com https://*.firebaseio.com https://apis.google.com; object-src 'self'",
+    "content_security_policy": "script-src 'self' 'unsafe-eval' https://www.gstatic.com https://*.firebaseio.com https://apis.google.com; object-src 'self'",
     "oauth2": {
-        "client_id": "759441836020-t2tmv8qqq9c8421n4ti2djfoq3iab8hp.apps.googleusercontent.com",
+        "client_id": "340986983672-et6re1a3agi2dr9kkqvtmhu8upmg8ljl.apps.googleusercontent.com",
         "scopes": [
           "https://www.googleapis.com/auth/userinfo.email",
-          "https://www.googleapis.com/auth/userinfo.profile",
-          "https://www.googleapis.com/auth/spreadsheets"
+          "https://www.googleapis.com/auth/userinfo.profile"
         ]
       },
     "manifest_version": 2
