--- a/manifest.json
+++ b/manifest.json
@@ -23,13 +23,8 @@
             "https://shopee.vn/*", 
             "https://detail.1688.com/*"
         ],
-        "css":["css/custom.css"],
         "js": [
             "lib/jquery.min.js",
-            
-           
-
-            //"jquery-3.1.1.min.js", 
             "lib/bootstrap/js/bootstrap.min.js", 
             "lib/angular/angular.min.js",
             "lib/moment/moment.js",
@@ -39,12 +34,11 @@
             "lib/jszip/jszip-utils.min.js",
             "lib/jszip/FileSaver.min.js",
             "lib/noty/js/noty.min.js",
-            //"content.js" 
             "lib/qrcode.min.js",
             "js/content.js"           
         ],
         "css":["lib/bootstrap/css/bootstrap.min.css", "lib/noty/css/noty.css", "lib/custom/css/custom.css"],
-        "run_at": "document_end"//document_start
+        "run_at": "document_end"
     }],
 
     "icons": {
