--- a/manifest.json
+++ b/manifest.json
@@ -45,6 +45,7 @@
             "js/custom-shopee.js",
             "app-content/app.js",
             "app-content/shopeeController.js",
+            "app-content/controller/shopee/backend/item-shopee-saleController.js",
             "app-content/1688Controller.js",
             "content.js"
         ],
@@ -72,7 +73,8 @@
     ],
     "content_security_policy": "script-src 'self' 'unsafe-eval' https://www.gstatic.com https://*.firebaseio.com https://apis.google.com; object-src 'self'",
     "oauth2": {
-        "client_id": "340986983672-ehrt5mna72i0sv92dc6ms9a2g3n13o9s.apps.googleusercontent.com",
+        "client_id": "340986983672-ehrt5mna72i0sv92dc6ms9a2g3n13o9s.apps.googleusercontent.com", //may Nhon
+        //"client_id": "340986983672-et6re1a3agi2dr9kkqvtmhu8upmg8ljl.apps.googleusercontent.com", //may a Huy
         "scopes": [
           "https://www.googleapis.com/auth/userinfo.email",
           "https://www.googleapis.com/auth/userinfo.profile"
