--- a/manifest.json
+++ b/manifest.json
@@ -18,6 +18,7 @@
         "page": "background/background.html"
     },
     "web_accessible_resources": [
+        "options.html",
         "img/*.png",
         "app-content*.html"
       ],
@@ -34,6 +35,7 @@
 
             "lib/bootstrap/js/bootstrap.min.js", 
             "lib/angular/1.5.9/angular.min.js",
+            "lib/angular/1.5.9/angular-route.min.js",
             "lib/moment/moment.js",
             "lib/moment/angular-moment.min.js",
             "lib/moment/vi.js",
