--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "Lập Nghiệp Shop Online",
     "description": "Công cụ hỗ trợ các shop bán hàng thông minh hơn",
-    "version": "3.0.5",
+    "version": "3.1.0",
     "options_page": "options.html",
 
     "browser_action": {
@@ -26,7 +26,8 @@
         "matches": [
             "https://banhang.shopee.vn/*",
             "https://shopee.vn/*", 
-            "https://detail.1688.com/*"
+            "https://detail.1688.com/*",
+            "https://work.1688.com/*"
         ],
         "js": [
             "lib/jquery.min.js",
@@ -48,6 +49,7 @@
             "app-content/shopee/backend/single-sale/controller.js",
             "app-content/shopee/backend/list-page/controller.js",
             "app-content/1688/frontend/single-product/controller.js",
+            "app-content/1688/backend/listOrders/controller.js",
             "app-content/shopee/backend/homepage/controller.js",
             "content.js"
         ],
