--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "Lập Nghiệp Shop Online",
     "description": "Công cụ hỗ trợ các shop bán hàng thông minh hơn",
-    "version": "3.1.0",
+    "version": "3.1.2",
     "options_page": "options.html",
 
     "browser_action": {
@@ -76,9 +76,9 @@
         "*://shopee.vn/",
         "*://cf.shopee.vn/"
     ],
-    "content_security_policy": "script-src 'self' 'unsafe-eval' https://www.gstatic.com https://*.firebaseio.com https://apis.google.com ; object-src 'self'",
+    "content_security_policy": "script-src 'self' 'nonce-d452460d-e219-a6e5-5709-c8af6ca82889' 'unsafe-inline' 'unsafe-eval' https://www.gstatic.com https://*.firebaseio.com https://apis.google.com ; object-src 'self'",
     "oauth2": {
-        "client_id": "340986983672-agjb21eut5et0f93485pfdug1g75ghl5.apps.googleusercontent.com",
+        "client_id": "340986983672-et6re1a3agi2dr9kkqvtmhu8upmg8ljl.apps.googleusercontent.com",
         "scopes": [
           "https://www.googleapis.com/auth/userinfo.email",
           "https://www.googleapis.com/auth/userinfo.profile"
