--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-    "name": "Lập Nghiệp Shop Online Local",
+    "name": "Lập Nghiệp Shop Online",
     "description": "Công cụ hỗ trợ các shop bán hàng thông minh hơn",
-    "version": "3.1.7",
+    "version": "3.1.8",
     "options_page": "options.html",
 
     "browser_action": {
