--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "Lập Nghiệp Shop Online",
     "description": "Công cụ hỗ trợ các shop bán hàng thông minh hơn",
-    "version": "3.2.4",
+    "version": "3.3.1",
     "options_page": "options.html",
 
     "browser_action": {
@@ -31,9 +31,9 @@
         ],
         "js": [
             "lib/jquery.min.js",
-            "lib/jquery/jquery-ui.min.js",
-            "lib/bootstrap/js/bootstrap.min.js", 
+            "lib/jquery/jquery-ui.min.js",            
             "lib/angular/1.5.9/angular.min.js",
+            "lib/bootstrap/js/bootstrap.min.js", 
             "lib/angular/1.5.9/angular-route.min.js",
             "lib/moment/moment.js",
             "lib/moment/angular-moment.min.js",
@@ -43,6 +43,7 @@
             "lib/jszip/FileSaver.min.js",
             "lib/noty/js/noty.min.js",
             "lib/qrcode.min.js",
+            "lib/angucomplete-alt.min.js",
             "js/custom-shopee.js",
             "app-content/app.js",
             "app-content/shopee/frontend/single-product/controller.js",
@@ -53,7 +54,7 @@
             "app-content/shopee/backend/homepage/controller.js",
             "content.js"
         ],
-        "css":["lib/bootstrap/css/bootstrap.min.css", "lib/noty/css/noty.css", "lib/custom/content/css/custom.css"],
+        "css":["lib/bootstrap/css/bootstrap.min.css", "lib/noty/css/noty.css", "lib/custom/content/css/custom.css","lib/custom/content/css/angucomplete.css"],
         "run_at": "document_end"
     }],
 
@@ -64,6 +65,7 @@
         "128": "images/get_started128.png"
     },
     "permissions": [
+        "serial",
         "unlimitedStorage",
         "tabs",
         "notifications",
