--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "Lập Nghiệp Shop Online",
     "description": "Công cụ hỗ trợ các shop bán hàng thông minh hơn",
-    "version": "3.6.6",
+    "version": "3.7.4",
     "options_page": "options.html",
 
     "browser_action": {
@@ -43,7 +43,6 @@
             "lib/jszip/FileSaver.min.js",
             "lib/noty/js/noty.min.js",
             "lib/qrcode.min.js",
-            "lib/angucomplete-alt.min.js",
             "js/custom-shopee.js",
             "app-content/app.js",
             "app-content/shopee/frontend/single-product/controller.js",
@@ -73,6 +72,7 @@
         "debugger",
         "identity",
         "webRequest",
+        "contextMenus",
         "webRequestBlocking",
         "*://banhang.shopee.vn/",
         "*://shopee.vn/",
