--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "Lập Nghiệp Shop Online",
     "description": "Công cụ hỗ trợ các shop bán hàng thông minh hơn",
-    "version": "4.2.3",
+    "version": "4.4.4",
     "options_page": "options.html",
 
     "browser_action": {
@@ -53,7 +53,7 @@
             "app-content/shopee/backend/homepage/controller.js",
             "content.js"
         ],
-        "css":["lib/bootstrap/css/bootstrap.min.css", "lib/noty/css/noty.css", "lib/custom/content/css/custom.css","lib/custom/content/css/angucomplete.css"],
+        "css":["lib/noty/css/noty.css", "lib/custom/content/css/custom.css","lib/custom/content/css/angucomplete.css"],
         "run_at": "document_end"
     }],
 
